# directional-mic

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
directional_mic/: __init__.py  audio_input.py  beamformer.py  gaze_source.py  geometry.py  monitor_mics.py  record_aggregate.py  record_dual.py  record_with_chirp.py  runtime.py
docs/: dual_recording.md
eye_tracking/: EyetrackerExtention.cpp  GazeExample.py  GazeTracker.py  README.md  _listener_win32.py  data.txt  example.py  gaze_server.py  mock_gaze_server.py  requirements.txt
tests/: test_beamformer.py  test_geometry.py
video_demo/: face_detect.py  requirements.txt
