[project]
name = "directional-mic"
version = "0.1.0"
description = "Gaze-steered real-time beamformer for a 2-mic array"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.24",
    "scipy>=1.10",
    "sounddevice>=0.4.6",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
sim = [
    "pynput>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["directional_mic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
